# nugget-app

./: .env  .env.signing  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  config.json  credits.md  forge.config.js  main.js  package-lock.json  package.json  pyproject.toml  setup_editor.sh  tsconfig.json  webpack.config.js
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: macos-notarized-release.yml  publish.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.tsconfig/: tsconfig.json
app/: index.html  renderer.js  ui.js
app/page/: about.html  credit.html  setting.html
app/src/: App.ts  event.ts  index.js  index.ts
apps/app/: index.html
apps/automatic-caption/: .gitignore  index.html  package-lock.json
apps/overlay-record/: index.html  package-lock.json  package.json
assets/llm/: textPrompt.txt
docs/: CHAT_WIDGET_FLOW.md  README.ko.md  ROADMAP.md  apps.md  assets.md  electron.md  frontend.md  index.md  packages.md
electron/: afterAll.js  config.json  entitlements.mac.inherit.plist  entitlements.mac.plist  ipc.ts  main.ts  notarize.js  preload.ts  preloadExtension.ts  validate.ts  webServer.ts
electron/ipc/: ipcAi.ts  ipcApp.ts  ipcAuth.ts  ipcDesktopCapturer.ts  ipcDialog.ts  ipcExtension.ts  ipcFilesystem.ts  ipcMedia.ts  ipcOverlayRecord.ts  ipcPayment.ts  ipcSelfhosted.ts  ipcStore.ts  ipcStream.ts  ipcTimeline.ts  ipcYtdlp.ts
electron/lib/: autoUpdater.ts  extension.ts  ffmpeg.ts  ffprobe.ts  font.ts  init.ts  menu.js  menu.ts  render.js  render.ts  shell.ts  util.ts  window.js  window.ts  ytdlp.ts
electron/mcp/: mcpServer.ts
electron/quartz/: ipcQuartz.ts
frontend/: .env.example  AUTHENTICATION.md  CHAT_API_IMPLEMENTATION.md  package-lock.json  package.json  prices.md  tsconfig.json  vite.chat-interface.config.ts  vite.flow-widget.config.ts  vite.user-profile-dropdown.config.ts  vite.widget.config.ts
lib/: menu.js  render.js  util.js
scripts/: .gitignore  README.md  audio_api.py  config.yaml  cv_api.py  data_models.py  fakeserver.py  llm_api.py  main.py  pyproject.toml  run_server  sample_server.py  video_api.py
scripts/models/: WhisperApp.py  audio.py  image.py  model.py
scripts/prompts/: conversational_responses.py  system_prompt_tool_info.py  tool_info.py
scripts/prompts/add_file/: system_prompt_param_extraction.py  tool_info.py
scripts/prompts/add_portrait_effect/: tool_info.py
scripts/prompts/add_shape/: system_prompt_param_extraction.py  tool_info.py
scripts/prompts/add_slide/: system_prompt_param_extraction.py  tool_info.py
scripts/prompts/add_text/: system_prompt_param_extraction.py  tool_info.py
scripts/prompts/image_bg_remove/: tool_info.py
scripts/prompts/make_super_res/: tool_info.py
scripts/utils/: image_helpers.py  video_helpers.py
src/: App.js  index.js
tsconfig/: tsconfig.json
(+423 files in other folders)
