[project]
name = "qualcomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "deepfilternet>=0.5.6",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.33.0",
    "librosa>=0.11.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "ultralytics>=8.3.154",
    "uvicorn>=0.34.3",
]
