[project]
name = "qualcomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.7.0",
    "argparse>=1.4.0",
    "diffusers>=0.33.1",
    "deepfilternet>=0.5.6",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.33.0",
    "numpy>=1.23.5,<2.0.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0,<12.0.0",
    "python-multipart>=0.0.20",
    "qai-hub-models[midas]>=0.30.4",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "torch>=1.10.0,<2.5.0",
    "torchvision>=0.16.0,<0.21.0",
    "transformers>=4.20.0",
    "ultralytics>=8.0.0",
    "librosa>=0.11.0",
    "numpy>=1.26.4",
    "onnxruntime>=1.22.0",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.0",
    "python-multipart>=0.0.20",
    "samplerate>=0.2.1",
    "soundfile>=0.13.1",
    "suno-bark>=0.1.5",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "ultralytics>=8.3.154",
    "uvicorn>=0.34.3",
    "vidstab>=1.7.4",
    "yt-dlp>=2025.6.9",
]
